# gst-plugins-bad

./: configure.ac
docs/plugins/: Makefile.am  gst-plugins-bad-plugins-docs.sgml  gst-plugins-bad-plugins-sections.txt
gst/: meson.build
gst/autoconvert2/: Makefile.am  gstautoconvert2.c  gstautoconvert2.h  gstautovideoconvert2.c  gstautovideoconvert2.h  meson.build  plugin.c
